# DeckStocker

./: pyproject.toml
src/: test.py
src/stocker/: product.py  sitemap.py
src/stocker/providers/: baker.py  base.py  nocomply.py
